<resources>
    <string name="app_name">APKtele</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mainButt">Main</string>
    <string name="homeButt">Home</string>
    <string name="backButt">Back</string>

    <string name="backgroundSvg">BackgroundSVG</string>


    <string name="categories">Categories</string>
    <string name="applications">Applications</string>
    <string name="special_deal">Special Deal</string>
    <string name="popular_app">Popular Applications</string>

    <string name="see_more">See more</string>


    <string name="download_btn">Download</string>
    <string name="title_activity_application">ApplicationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    Activity-->
    <string name="category">Category</string>
    <string name="title">title</string>
    <string name="ico">ico</string>
    <string name="fullDescription">fullDescription</string>
    <string name="shortDescription">shortDescription</string>
    <string name="applicationTag">applicationTag</string>
    <string name="Activity">Activity</string>

</resources>