<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Category"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="title"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/ico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="ico"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortDescription"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/shortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="shortDescription"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullDescription"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/fullDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="fullDescription"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applicationTag"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/applicationTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="applicationTag"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>