<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/bg_layout"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:contentDescription="@string/backgroundSvg"
                        android:scaleType="fitXY"
                        android:src="@drawable/bg_main"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/appname_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/montserrat_alternates_semibold"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/bg_layout" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/categories"
                    android:textColor="#212121"
                    android:textSize="18sp"
                    android:layout_marginStart="32dp"/>

                <LinearLayout
                    android:id="@+id/categoriesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="32dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categoriesView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <TextView
                    android:id="@+id/special_deal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/special_deal"
                    android:textColor="#212121"
                    android:textSize="18sp"
                    android:layout_marginStart="32dp"/>

                <LinearLayout
                    android:id="@+id/specialLayout"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="32dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <TextView
                    android:id="@+id/popular_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/popular_app"
                    android:textColor="#212121"
                    android:textSize="18sp"
                    android:layout_marginStart="32dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="32dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/applicationsView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>